--- a/index.html
+++ b/index.html
@@ -2,9 +2,106 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Lucis Via - Coming Soon</title>
+    <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>Coming Soon</h1>
+    <header id="content-header">
+        <div class="page-block">
+            <img src="css/img/sacredheart.png" class="logo" alt="logo" />
+
+            <h1>Lucis Via
+                <sub>Young Adult Catholics</sub>
+            </h1>
+
+            <nav>
+                <a href="#locations">Locations</a>
+                <a href="#connect">Connect</a>
+            </nav>
+        </div>
+    </header>
+
+    <section id="page-content" class="page-block">
+
+        <div class="major-block banner">
+            <div class="block-body">
+                <h2>Hi. Welcome.</h2>
+                <p>
+                    We are a group of young adults (18-35 ish) in South Carolina who meet weekly to study God's word, pray, and fellowship.
+                    We also participate in charities, play sports, go to movies, and do a million other things.
+                </p>
+                <p>
+                    Ignite your faith. Get plugged in.
+                </p>
+            </div>
+        </div>
+
+        <div id="locations" class="minor-block">
+            <div class="block-body">
+                <h2>Charleston
+                </h2>
+                <p>
+                    <span class="time">Wednesdays from 7 - 8:30</span> at <a class="location" href="https://maps.google.com/maps?q=Daughters+of+St.+Paul,+King+Street,+Charleston,+SC&hl=en&sll=32.783017,-79.924421&sspn=0.060326,0.132093&oq=daughters+of+st+paul&hq=Daughters+of+St.+Paul,+King+Street,+Charleston,+SC&t=m&z=15&iwloc=A">The Daughters of St. Paul</a>
+                </p>
+                <p class="subtext">
+                    Feel free to come a bit early. We are located around on the side of the daughters' building in the John Paul II room. (You'll see two big doors with glass windows.)
+                </p>
+            </div>
+        </div>
+
+        <div class="minor-block">
+            <div class="block-body">
+                <h2>Mt. Pleasant
+                </h2>
+                <p>
+                    <span class="time">Mondays from 7 - 8:30</span> at <a class="location" href="https://maps.google.com/maps?q=christ+our+king+catholic+church,+mt+pleasant,+sc&hl=en&sll=32.813552,-79.846036&sspn=0.063407,0.132093&hq=christ+our+king+catholic+church,&hnear=Mt+Pleasant,+Charleston,+South+Carolina&t=m&z=13">Christ Our King</a>
+                </p>
+                <p class="subtext">
+                    We meet at the Russell House, which is the little building beside the great big beach house.
+                </p>
+            </div>
+        </div>
+
+        <div class="minor-block">
+            <div class="block-body">
+                <h2>Summerville
+                </h2>
+                <p>
+                    <span class="time">Thursdays from 7 - 8:30</span> at <a class="location" href="http://binged.it/15zCRHK">The Azalea Room</a>
+                </p>
+                <p class="subtext">
+                    The Azalea Room Banquet Hall is located near Planter's Retreat Apartments. 
+                </p>
+            </div>
+        </div>
+
+        <div id="connect" class="major-block alt">
+            <div class="block-body">
+                <h2>Connect</h2>
+                <p>
+                    We coordinate almost everything through our two Facebook groups:
+                    <span class="links">
+                        <a href="https://www.facebook.com/groups/Cathedralyag/?fref=ts" class="fb">Events and Updates</a>
+                        <a href="https://www.facebook.com/groups/LucisVia/?fref=ts" class="fb">Resources</a>
+                    </span>
+                </p>
+                
+                <p>
+                    You can also sign up to receive weekly updates and notifications:
+                    <span class="links">
+                        <a href="http://lucisvia.us5.list-manage2.com/subscribe?u=cdc9b5e0dd8186614141e2bba&id=763f1b73fb" class="fb">Mailing List</a>
+                    </span>
+                </p>
+
+                <p>
+                    Last but not least, we have an official office of young adult ministry for the diocese of Charleston:
+                    <span class="links">
+                        <a href="http://catholicyoungadultsofsc.com/" class="fb">Office of Young Adult Ministry</a>
+                    </span>
+                </p>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
