--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Lucis Via - Coming Soon</title>
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" type="text/css" />
