--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="css/img/sacredheart.png" class="logo" alt="logo" />
 
             <h1>Lucis Via
-                <sub>Young Adult Catholics</sub>
+                <span class="sub">Young Adult Catholics</span>
             </h1>
 
             <nav>
