--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div class="page-block">
             <img src="css/img/sacredheart.png" class="logo" alt="logo" />
 
-            <h1>Lucis Via
+            <h1>
+                Lucis Via
                 <span class="sub">Young Adult Catholics</span>
             </h1>
 
