Updating the summerville study...

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                 <h2>Summerville
                 </h2>
                 <p>
-                    <span class="time">Thursdays from 7 - 8:30</span> at <a class="location" href="http://binged.it/15zCRHK">The Azalea Room</a>
+                    <span class="time">Thursdays from 7 - 8:30</span> at <a class="location" href="http://binged.it/1fX2W8L">St. Leo University</a>
                 </p>
                 <p class="subtext">
-                    The Azalea Room Banquet Hall is located near Planter's Retreat Apartments. 
+                    The full address is 2430 Mall Drive, First Federal Corporate Center Suite 185 in North Charleston.
                 </p>
             </div>
         </div>
