Summerville to North Chuck

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="minor-block">
             <div class="block-body">
-                <h2>Summerville
+                <h2>North Charleston
                 </h2>
                 <p>
                     <span class="time">Thursdays from 7 - 8:30</span> at <a class="location" href="http://binged.it/1fX2W8L">St. Leo University</a>
